# autodiDAQt

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pylintrc  .readthedocs.yml  CODE_OF_CONDUCT.md  DEVELOP.md  LEGAL.txt  LICENSE.txt  MANIFEST.in  Makefile  PENDING.md  README.rst  environment.yml  package-lock.json  package.json  pyproject.toml  pytest-coverage.ini  pytest-live.ini  pytest-watch.ini  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: greetings.yml  test.yml
.husky/: pre-commit
autodidaqt/: __init__.py  actor.py  collections.py  config.py  core.py  data.py  globals.py  interlock.py  mock.py  notifications.py  panel.py  registrar.py  scan.py  state.py  utils.py  version.py  widgets.py
autodidaqt/examples/: __init__.py  axis_settling.py  computed_axis.py  dataclass_binding.py  manual_axis.py  manuscript_fig4.py  minimal_app.py  plot_data.py  scanning_custom_plots.py  scanning_experiment.py  scanning_experiment_revisited.py  scanning_interlocks.py  scanning_properties_and_profiles.py  scanning_setup_and_teardown.py  scanning_time_to_completion.py  simple_actors.py  strategies.py  ui_panels.py  uninverted_control.py  wrapping_instruments.py
autodidaqt/experiment/: __init__.py  fsm.py  run.py  save.py
autodidaqt/instrument/: __init__.py  axis.py  managed_instrument.py  method.py  property.py  spec.py
autodidaqt/panels/: basic_instrument_panel.py  experiment_panel.py  instrument_manager.py  log_panels.py
autodidaqt/reactive_utils/: __init__.py
autodidaqt/remote/: link.py  scheduler.py
autodidaqt/resources/: default_config.json  default_config_windows.json  dropdowns.scss  scans.scss  text_inputs.scss
autodidaqt/runner/: template.py
autodidaqt/ui/: __init__.py  lens.py  models.py  pg_extras.py  timing.py
azure-pipelines/: ci-build.yml  deploy-pypi.yml
daquiri/: __init__.py  actor.py  collections.py  config.py  core.py  data.py  experiment.py  globals.py  interlock.py  mock.py  notifications.py  panel.py  registrar.py  scan.py  schema.py  state.py  ui.py  utils.py  version.py  widgets.py
daquiri/examples/: __init__.py  axis_settling.py  computed_axis.py  dataclass_binding.py  (+15 more)
integration_tests/: connect_and_shutdown.py  run_experiment.py  state_summary.py
profiling/: generate_profiling_data.ps1  profile_all.py  profile_image_acquisition.py  profile_image_data_save.py  profile_manual_axis.py  profile_manual_scan.py  profile_product_scans.py  profile_scalar_data_save.py  profile_short_scans.py  profile_uninverted_control.py
pytest-config/: pytest-coverage-codecov.ini  pytest-coverage.ini  pytest-watch.ini  pytest.ini
scripts/: dev_dataclass_bindings.py  dev_rx_models.py  dev_rx_table.py  generate_message_examples.py
tests/: common.py  conftest.py  test_autodidaqt.py  test_axis.py  test_collation.py  test_collections.py  test_daquiri.py  test_data.py  test_data_curation.py  test_experiment.py  test_fsm.py  test_lens.py  test_logical_axes.py  test_mock_instruments.py  test_models.py  test_panel.py  test_property_scanning.py  test_registrar.py  test_scan.py  test_state.py  test_utils.py  utils.py
utils/: pre-commit
zhivago/: __init__.py  core.py  data.py  experiment.py  mock.py  ui.py  utils.py
(+102 files in other folders)
